fixed spacing on email form

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,7 +23,7 @@ body {
 
 #email_reg_form input[type=text],
 #email_reg_form input[type=email] {
-  width: 100%;
+  width: 99%;
   font-size: 30px;
 }
 
